# Stupid

./: CMakeLists.txt  README.txt  build.bat  dependencies.c  gui.c  main.c  operations.c
include/: dependencies.h  globals.h  gui.h  operations.h
